# dabapush-gbq

./: .gitignore  pyproject.toml
.github/workflows/: main.yml
dabapush_gbq/: __init__.py  dabapush_gbq.py
tests/: test_bigquery_writer.py  test_package.py
